client/my-sites/plan-features-2023-grid/style.scss
/* ... */
.plan-comparison-grid {
	.plan-features-2023-gridrison__actions-buttons {
		min-height: 40px;
	}
	.plan-comparison-grid__header-cell {
		display: flex;
		flex-direction: column;
		align-items: stretch;
		justify-content: flex-start;
		padding-top: 46px;
		padding-bottom: 20px;

		@include plans-2023-break-small {
			padding-top: 34px;

			&.popular-plan-parent-class {
				&::before,
				&::after {
					height: 100%;
					bottom: 0;
				}
			}

			&.plan-is-footer {
				padding-top: 50px;
				padding-bottom: 24px;
			}
		}

		@include plans-2023-break-medium {
			&.plan-is-footer {
				padding-top: 110px;
			}
		}

		&.popular-plan-parent-class:not(.plan-is-footer) {
			.plan-features-2023-grid__popular-badge {
				width: 100%;
				background: #fff;
				z-index: 2;

				.plan-pill {
					top: 20px;
				}
			}

			@include plans-2023-break-small {
				.plan-features-2023-grid__popular-badge {
					padding: 20px 0 25px;
					position: absolute;
					top: -43px;
					left: -1px;
					border-color: #e0e0e0;
					border-width: 1px 1px 0 1px;
					/* stylelint-disable-next-line */
					border-radius: 5px 5px 0 0;
					border-style: solid;
				}

				&.is-left-of-featured {
					.plan-features-2023-grid__popular-badge {
						border-top-right-radius: 0;
					}
				}

				&.is-right-of-featured {
					.plan-features-2023-grid__popular-badge {
						border-top-left-radius: 0;
						left: 0;
					}

					// fixes border alignment
					// on badge that is on the last popular plan but not last in row
					// (so second to last with last being a personal plan)
					&:not(:last-of-type) {
						&:not(.is-last-in-row) {
							.plan-features-2023-grid__popular-badge {
								border-left: 0;
								box-sizing: border-box;
								left: 1px;
							}
						}
					}

				}

				&:last-of-type {
					&:not(.is-only-featured) {
						.plan-features-2023-grid__popular-badge {
							padding-right: 19px;
						}

						// fixes border alignment
						// on last popular plan that is not adjacent to another popular plan
						// (so last with second to last being a personal plan)
						&:not(.is-right-of-featured) {
							.plan-features-2023-grid__popular-badge {
								padding-right: 20px;
							}
						}
					}
				}
			}
		}

		.plan-pill {
			font-family: Inter, $sans;
			font-size: 0.75rem;
			font-weight: 500;
			color: var(--studio-white);
			letter-spacing: 0.2px;
			/* stylelint-disable-next-line declaration-property-unit-allowed-list */
			line-height: 1.25rem;
			padding: 0 9px;
			height: 20px;
			left: 20px;
			top: 20px;
			right: unset;
			border-radius: 4px;
			background-color: var(--studio-gray-80);
			text-transform: unset;

			@include plans-2023-break-small {
				left: 15px;
			}
			@include plans-2023-break-medium {
				top: 55px;
			}
		}
	}

	.plan-comparison-grid__plan {
		.gridicon {
			display: none;
		}

		.plan-comparison-grid__plan-title {
			color: var(--studio-gray-70);
			font-size: 0.875rem;
			font-weight: 500;
			text-align: center;
		}

		%plan-comparison-grid__plan-subtitle,
		.plan-comparison-grid__plan-subtitle {
			color: var(--studio-gray-40);
			font-size: 0.75rem;
			text-align: center;
			line-height: 1.4;
			margin-bottom: 5px;
		}
		&.title-is-subtitle .plan-comparison-grid__plan-title {
			@extend %plan-comparison-grid__plan-subtitle;
		}

		&:not(.has-feature) {
			.plan-comparison-grid__plan-title,
			.plan-comparison-grid__plan-subtitle {
				text-decoration: line-through;
			}
		}

		@include plans-2023-break-small {
			.plan-comparison-grid__plan-image,
			.plan-comparison-grid__plan-title,
			.plan-comparison-grid__plan-subtitle {
				display: none;
			}
			.gridicon {
				display: block;
			}
		}
	}
	.popular-plan-parent-class {
		position: relative;
		&:not(.is-right-of-featured)::before,
		&::after {
			content: "";
			display: none;
			width: 1px;
			height: 140px;
			bottom: -20px;
			background: #e0e0e0;
			position: absolute;
		}
		&::before {
			left: -1px;
		}
		&::after {
			right: -1px;
		}

		@include plans-2023-break-small {
			&::before,
			&:not(:last-of-type)::after {
				display: block;
			}
		}
	}


	.plan-comparison-grid__title {
		margin-top: 0;
		margin-bottom: 12px;
		font-size: $font-title-small;
		line-height: 1.2;
		color: var(--studio-gray-100);
		font-weight: 400;
	}

	.plan-features-2023-grid__pricing {
		padding: 0;
		flex: 1;
		display: flex;
		flex-direction: column;
		justify-content: flex-end;

		.plan-price.is-discounted {
			color: var(--color-neutral-70);

			.plan-price__integer-fraction {
				color: inherit;
			}
		}

		.plan-price.is-large-currency {
			.plan-price__integer {
				font-size: rem(30px);
			}
		}
	}

	.plan-comparison-grid__billing-info {
		color: var(--studio-gray-50);
		font-weight: 400;
		font-size: $font-body-extra-small;
		margin-bottom: 10px;
		min-height: 30px;
		line-height: 1.3;

		@include plans-2023-break-small {
			margin: 7px 0 10px;
		}

		.plan-features-2023-grid__vip-price {
			font-size: $font-body;
			line-height: 24px;
			font-weight: 400;
			color: var(--studio-gray-80);

			@include plans-2023-break-small {
				font-size: $font-body-small;
				line-height: 20px;
			}

			@include plans-2023-break-medium {
				font-size: $font-body-extra-small;
				line-height: 16px;
			}
		}
	}
}
/* ... */

